<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middleguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />
    <ImageView
        android:id="@+id/imageViewRobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/middleguideline"
        app:layout_constraintEnd_toStartOf="@+id/endguideline"
        app:layout_constraintStart_toStartOf="@+id/startguideline"
        app:layout_constraintTop_toTopOf="@+id/topguideline"
        app:srcCompat="@drawable/business_3d_happy_robot_assistant_waving_hello"
        />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        style="@style/CustomEditTextStyleAuth"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColorHint="#777777"
        android:padding="13dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/endguideline"
        app:layout_constraintStart_toStartOf="@+id/startguideline"
        app:layout_constraintTop_toBottomOf="@+id/middleguideline" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/endguideline"
        app:layout_constraintStart_toStartOf="@+id/startguideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomEditTextStyleAuth"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="#777777"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/login"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:background="@drawable/round_corner_background"
        android:stateListAnimator="@xml/button_animation"
        app:layout_constraintEnd_toStartOf="@+id/endguideline"
        app:layout_constraintStart_toStartOf="@+id/startguideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:layout_constraintBottom_toTopOf="@id/textViewGoToRegister"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/textViewGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/do_not_have_an_account_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endguideline"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/startguideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>